dep-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      volumes:
      - name: app-volume
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: app-volume
          mountPath: /data
