dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstdeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-apps
  template:
    metadata:
      labels:
        app: my-apps
    spec:
      containers:
        - name: nginx1
          image: nginx
          command: ["sh", "-c"]
          args:
            - echo "Hello from deployment, APP_MODE=$APP_MODE" && sleep infinity
