serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-dep
spec:
  type: NodePort
  selector:
    app: my-apps
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
